--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "cpf-cnpj-validator": "^1.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
-        "typeorm": "^0.3.16"
+        "typeorm": "^0.3.16",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
