--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "main": "index.js",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "typeorm": "npx typeorm-ts-node-commonjs",
+        "entity:create": "typeorm entity:create",
+        "migration:create": "typeorm migration:create",
         "build": "npx tsc",
         "start": "node dist/server.js"
     },
@@ -27,6 +30,7 @@
         "@types/node": "^20.1.3",
         "@types/pg": "^8.6.6",
         "@types/uuid": "^9.0.1",
+        "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.4"
     }
