--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-        "typeorm": "npx typeorm-ts-node-commonjs",
+        "typeorm": "typeorm-ts-node-commonjs",
         "entity:create": "typeorm entity:create",
         "migration:create": "typeorm migration:create",
         "build": "npx tsc",
@@ -15,9 +15,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/dotenv": "^8.2.0",
         "cors": "^2.8.5",
         "cpf-cnpj-validator": "^1.0.3",
         "dotenv": "^16.0.3",
+        "dotenv-safe": "^8.2.0",
         "express": "^4.18.2",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
@@ -26,12 +28,12 @@
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
+        "@types/dotenv-safe": "^8.1.2",
         "@types/express": "^4.17.17",
         "@types/node": "^20.1.3",
         "@types/pg": "^8.6.6",
         "@types/uuid": "^9.0.1",
         "ts-node": "^10.9.1",
-        "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.4"
     }
 }
