--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
         "typeorm": "typeorm-ts-node-commonjs",
-        "entity:create": "typeorm entity:create",
-        "migration:create": "typeorm migration:create",
+        "typeorm2": "ts-node-dev --respawn --transpile-only ./node_modules/typeorm/cli.js",
+        "Ecreate": "npm run typeorm entity:create src/entities/",
+        "Mcreate": "npm run typeorm migration:create src/migrations/",
+        "Mgenerate": "npm run typeorm migration:generate -- -d src/database/dataSource",
+        "Mrun": "npm run typeorm migration:run -- -d src/database/dataSource.ts",
+        "Mrevert": "npm run typeorm migration:revert -- -d src/database/dataSource.ts",
+        "Mshow": "npm run typeorm migration:show -- -d src/database/dataSource.ts",
         "build": "npx tsc",
         "start": "node dist/server.js"
     },
@@ -34,6 +39,7 @@
         "@types/pg": "^8.6.6",
         "@types/uuid": "^9.0.1",
         "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.4"
     }
 }
